# futarchy

./: .solitarc.js  Anchor.toml  README.md  package.json
programs/autocrat/src/: lib.rs
programs/totem/: Cargo.toml
programs/totem/src/: constants.rs  error.rs  lib.rs
programs/totem/src/instructions/: create_statement.rs  dispute_statement.rs  dispute_statement_legacy.rs  initialize_totem.rs  mod.rs  request_statement.rs  settle_dispute.rs  update_totem.rs
programs/totem/src/state/: dispute.rs  mod.rs  request.rs  statement.rs  totem.rs
scripts/: finalizeProposal.ts
scripts/totem/: crankProposal.ts  createLookupTables.ts  createTotemDao.ts  disputeStatement.ts  es.ts  finaliseProposal.ts  getDispute.ts  index.ts  mintTotemDaoTokens.ts  passDispute.ts  proposeStatement.ts  settleDispute.ts  signAndSendTransaction.ts  updateTotem.ts
sdk/src/v0.3/: AutocratClient.ts
sdk/src/v0.4/: AutocratClient.ts
tests/autocrat/: autocrat.ts
tests/totem/: main.test.ts
totem-idl/: totem.json
totem-ui/: package.json
totem-ui/public/fonts/: fonts.css
totem-ui/src/components/Details/: index.tsx
totem-ui/src/components/Navbar/: index.tsx
totem-ui/src/components/StatementTable/: index.tsx
totem-ui/src/components/ui/: dropdown-menu.tsx  table.tsx
totem-ui/src/pages/: _app.tsx  _document.tsx  app.tsx  index.tsx
totem-ui/src/styles/: compiled.css  globals.css
totem_sdk/: package.json  tsconfig.json
totem_sdk/src/classes/: Totem.ts  index.ts
