[package]
name = "totem"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "totem"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
autocrat = { path = "../autocrat", features = [ "cpi" ] }
amm = { path = "../amm", features = [ "cpi" ] }
conditional_vault = { path = "../conditional_vault", features = [ "cpi" ] }
